feat(editor): integrate layout, mouse, and text selection support.
- Integrate layout-aware rendering and viewport management.
- Add mouse input handling for editor, dialogs, menus, and search.
- Support deleting and replacing selected text
- Replace direct key reading with unified input event processing
- Refactor editor event loop around keyboard and mouse events.